Revert "Updated Global Email URL for v4"
This reverts commit bb5526f7874ee4cc1f7317c539e00cd5e1e4e30a.